# Factorial

./: CMakeLists.txt  README.md  bench.cpp  factorial_unittest.cpp  main.cpp  unittest.cpp
include/: factorial.hpp
src/: CMakeLists.txt  factorial.cpp
